# SimplePresenter

./: .gitignore  README.md
gui/: Cargo.toml
gui/src/: main.rs  main_window.xml
projector/: Cargo.toml  build.rs
projector/src/: ipc.rs  main.rs  video.rs
shared/: Cargo.toml
shared/src/: client.rs  lib.rs  path.rs
test/: websocket_server.py
