[package]
name = "gui"
version = "0.1.1"
edition = "2024"

[package.metadata.winres]
windows_subsystem = "windows"

[dependencies]
shared = { path = "../shared" }

gtk4 = "0.10.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.27.0"
url = "2.5.7"
futures-util = "0.3.31"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
debug = false